--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Resume Example</title>
 	<link rel="stylesheet" type="text/css" href="caribue.css">
+	
 </head>
 <body>
 
@@ -12,7 +13,7 @@
 <a href="http://www.gmail.com">ahmedkadar.farah@gmail.com</a>
 
 <div>
-		Objective
+		Objective or it :)
 </div>
 
 
