--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Resume Example</title>
 	<link rel="stylesheet" type="text/css" href="caribue.css">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway:400,700i" rel="stylesheet">
 	
 </head>
 <body>
