--- a/test.html
+++ b/test.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Resume Example</title>
 	<link rel="stylesheet" type="text/css" href="caribue.css">
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway:400,700i" rel="stylesheet">
+	<style>
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Raleway:400,700i');
+</style>
 	
 </head>
 <body>
