changed phone image name

--- a/AhmedResume.html
+++ b/AhmedResume.html
@@ -22,7 +22,7 @@
 	</span>
 
 	<span class="emailAddress">
-		<img src="computerImage.jpg" class="computerImage">
+		<img src="https://afahmed.github.io/home.jpg" class="computerImage">
 		ahmedkadar@hotmail.com
 	</span>
 
